overflow issue solved

--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -116,4 +116,7 @@
   .navbar-mobile {
     display: none;
   }
+  .navbar-container {
+    overflow: visible;
+  }
 }
